--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-"Assignment 1/Project1/.vs/Project1/v16/Browse.VC.opendb"
-
+C:/Users/isaac/OneDrive/Documents/UWB/CS343/Assignment 1/Project1/.vs
+*.opendb
