--- a/Assignment 1/Project1/Project1.vcxproj
+++ b/Assignment 1/Project1/Project1.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClInclude Include="Poly.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="simplecompile.sh" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
